force-app/main/default/objects/Player__c/fields/BattingStyle__c.field-meta.xml
<CustomField>
    <fullName>BattingStyle__c</fullName>
    <label>Batting Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left Hand</fullName>
            </value>
            <value>
                <fullName>Right Hand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>