force-app/main/default/objects/Player__c/fields/BowlingStyle__c.field-meta.xml
<CustomField>
    <fullName>BowlingStyle__c</fullName>
    <label>Bowling Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right Arm Spin</fullName>
            </value>
            <value>
                <fullName>Left Arm Spin</fullName>
            </value>
            <value>
                <fullName>Right Arm Medium</fullName>
            </value>
            <value>
                <fullName>Left Arm Medium</fullName>
            </value>
            <value>
                <fullName>Left Arm Slow</fullName>
            </value>
            <value>
                <fullName>Right Arm Slow</fullName>
            </value>
            <value>
                <fullName>Right Arm Fast</fullName>
            </value>
            <value>
                <fullName>Left Arm Fast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>