force-app/main/default/objects/Player__c/fields/EconomyRate__c.field-meta.xml
<CustomField>
    <fullName>EconomyRate__c</fullName>
    <label>Economy Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>