force-app/main/default/objects/Player__c/fields/Fifers__c.field-meta.xml
<CustomField>
    <fullName>Fifers__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fifers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>