force-app/main/default/objects/Player__c/fields/Fifties__c.field-meta.xml
<CustomField>
    <fullName>Fifties__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fifties</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>