force-app/main/default/objects/Player__c/fields/Fours__c.field-meta.xml
<CustomField>
    <fullName>Fours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>