force-app/main/default/objects/Player__c/fields/HighestScore__c.field-meta.xml
<CustomField>
    <fullName>HighestScore__c</fullName>
    <label>Highest Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>