force-app/main/default/objects/Player__c/fields/Hundreds__c.field-meta.xml
<CustomField>
    <fullName>Hundreds__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hundreds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>