force-app/main/default/objects/Player__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All-Rounder</fullName>
            </value>
            <value>
                <fullName>Batsman</fullName>
            </value>
            <value>
                <fullName>Wicket Keeper</fullName>
            </value>
            <value>
                <fullName>Bowler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>