force-app/main/default/objects/Player__c/fields/Runs__c.field-meta.xml
<CustomField>
    <fullName>Runs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Runs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>