force-app/main/default/objects/Player__c/fields/Sixes__c.field-meta.xml
<CustomField>
    <fullName>Sixes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sixes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>