force-app/main/default/objects/Player__c/fields/StrikeRate__c.field-meta.xml
<CustomField>
    <fullName>StrikeRate__c</fullName>
    <label>Strike Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>