force-app/main/default/objects/Player__c/fields/Wickets__c.field-meta.xml
<CustomField>
    <fullName>Wickets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wickets</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>