force-app/main/default/objects/Player__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Team__c</columns>
    <columns>Role__c</columns>
    <columns>BattingStyle__c</columns>
    <columns>BowlingStyle__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>